[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/gui/CombatControls.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/ui/CombatScene.gd" type="Script" id=2]
[ext_resource path="res://scenes/gui/Menu.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/music/intro.ogg" type="AudioStream" id=4]

[node name="CombatScene" type="Node"]
script = ExtResource( 2 )

[node name="PlayerContainer" type="Node2D" parent="."]

[node name="Player" type="Position2D" parent="PlayerContainer"]
position = Vector2( 60, 200 )

[node name="Enemy1" type="Position2D" parent="PlayerContainer"]
position = Vector2( 260, 200 )

[node name="CombatControls" parent="." instance=ExtResource( 1 )]

[node name="Menu" parent="." instance=ExtResource( 3 )]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
autoplay = true

[connection signal="IsLoading" from="." to="CombatControls" method="_on_CombatScene_IsLoading"]
[connection signal="ShowMsg" from="." to="CombatControls" method="_on_CombatScene_ShowMsg"]
[connection signal="UseMove" from="CombatControls" to="." method="_on_CombatControls_UseMove"]
[connection signal="showNextPlay" from="CombatControls" to="." method="_on_CombatControls_showNextPlay"]
